# MHConnect

./: .gitignore  CMakeLists.txt  README.md  setup.sh
client/: .gitignore  CMakeLists.txt  main.cpp  main_h.cpp
client/core/: CMakeLists.txt
client/core/include/: client.h
client/core/src/: audio.cpp  client.cpp
client/include/: audio.h  client.h  client_h.h  context.h  core.h  gui.h  video.h
client/interface/: CMakeLists.txt  main.cpp
client/src/: audio.cpp  client.cpp  client_h.cpp  context.cpp  gui.cpp  main_gui.cpp  start_gui.cpp  video.cpp
common/: CMakeLists.txt  MHwindows.h  common.h  threadpool.h
server/: CMakeLists.txt  main.cpp
server/include/: chat_room.h  client.h  server.h
server/src/: chat_room.cpp  client.cpp  server.cpp
